// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyAccount: reducer reset error 1`] = `
Object {
  "error": null,
  "isTempPasswordVerified": false,
}
`;

exports[`VerifyAccount: reducer reset temporary password 1`] = `
Object {
  "error": null,
  "isTempPasswordVerified": false,
}
`;

exports[`VerifyAccount: reducer set initial state 1`] = `
Object {
  "error": null,
  "isTempPasswordVerified": false,
}
`;

exports[`VerifyAccount: reducer verify account on failure 1`] = `
Object {
  "error": "Error to be occured",
  "isTempPasswordVerified": false,
}
`;

exports[`VerifyAccount: reducer verify account on success 1`] = `
Object {
  "error": null,
  "isTempPasswordVerified": true,
}
`;
